--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
+    "sweetalert2": "^11.1.10",
+    "sweetalert2-react": "^0.8.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
