--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.19.3",
     "react-icons": "^4.3.1",
     "react-loading-skeleton": "^3.0.1",
+    "react-rating": "^2.0.5",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
